# MMUST-EMPORIUM-HACKATHON

./: .env  .gitignore  README.md  instructions.md  main.py  pyproject.toml
CallCentre/: .gitignore  README.md  docker-compose.yml
CallCentre/docs/: dashboard-plan.md  setup-freepbx.md
CallCentre/mysql/: init.sql
CallCentre/scripts/: init-secrets.sh  install-freepbx.sh  laptop-ip.sh
MKFR/: .gitignore  KMHFR_INTEGRATION_DOCS.md  package-lock.json  package.json  server.js
MKFR/public/: admin.html
MKFR/src/controllers/: bookingController.js  facilityController.js  intelligenceController.js  liveStatusController.js  routingController.js  triageController.js
MKFR/src/models/: dataStore.js  schema.sql
MKFR/src/routes/: booking.js  facility.js  intelligence.js  liveStatus.js  routing.js  triage.js
MKFR/src/services/: aiTriageService.js  kmhfrService.js  notificationService.js  routingEngine.js
MKFR/src/utils/: helpers.js
SMS/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
SMS/data/: app.db-shm  app.db-wal
SMS/scripts/: mqtt-smoke.mjs
SMS/src/: index.js
afyaroot-health-assist/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
afyaroot-health-assist/public/: manifest.json
afyaroot-health-assist/src/: App.tsx  index.css
agents/: __init__.py  memory_agent.py  prompts.py  queue_agent.py  triage_agent.py  voice_agent.py
app_supabase/: __init__.py  client.py  schema.sql
backend/: index.js  package-lock.json  package.json
tools/: __init__.py  supabase_tools.py
(+42 files in other folders)
